--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.0",
+    "axios": "^0.26.0",
     "react": "17.0.2",
+    "react-hook-form": "^7.27.1",
     "react-native": "0.67.2",
     "react-native-dotenv": "^3.3.1",
     "react-native-paper": "^4.11.2",
