--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.16.1",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.0",
     "axios": "^0.26.0",
+    "jwt-decode": "^3.1.2",
     "react": "17.0.2",
     "react-hook-form": "^7.27.1",
     "react-native": "0.67.2",
