--- a/.env
+++ b/.env
@@ -1,1 +1,8 @@
 API_URL = http://151.106.112.34:8080/api/v1
+ITAM_URL = https://itam.dev.digiprimatera.co.id:8081
+BLE_URL = https://www.google.com
+TRACKING_3D_URL = https://www.google.com
+ADMIN_URL = https://www.google.com
+ERROR_CONNECTION = Koneksi Terganggu
+ERROR_COMMON = Aplikasi Mengalami Kesalahan
+ERROR_TITLE = Kesalahan
