--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -173,8 +173,8 @@ android {
         release {
             // Caution! In production, you need to generate your own keystore file.
             // see https://reactnative.dev/docs/signed-apk-android.
-            // signingConfig signingConfigs.debug // *for debug            
-            signingConfig signingConfigs.release // *for release
+            signingConfig signingConfigs.debug // *for debug            
+            // signingConfig signingConfigs.release // *for release
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
         }
