--- a/ios/Podfile
+++ b/ios/Podfile
@@ -14,6 +14,8 @@ target 'PolriRfidFrontendAndroid' do
 
   pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
 
+  pod 'react-native-webview', :path => '../node_modules/react-native-webview'
+
   target 'PolriRfidFrontendAndroidTests' do
     inherit! :complete
     # Pods for testing
