--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 API_URL = http://151.106.112.34:8080/api/v1
 ITAM_URL = https://itam.dev.digiprimatera.co.id:8081
 BLE_URL = https://www.google.com
-TRACKING_3D_URL = https://www.google.com
+TRACKING_3D_URL = http://192.168.8.114:4200/
 ADMIN_URL = https://www.google.com
 ERROR_CONNECTION = Koneksi Terganggu
 ERROR_COMMON = Aplikasi Mengalami Kesalahan
