add uji mat menu and tampilan

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 API_URL = http://151.106.112.34:8080/api/v1
+TIME_OUT = 3000
 ERROR_CONNECTION = Koneksi Terganggu
 ERROR_COMMON = Aplikasi Mengalami Kesalahan
 ERROR_TITLE = Kesalahan
