--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native": "0.67.2",
     "react-native-dotenv": "^3.3.1",
     "react-native-paper": "^4.11.2",
+    "react-native-paper-dropdown": "^1.0.7",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.11.0",
     "react-native-splash-screen": "^3.3.0",
