--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "react-native-dotenv": "^3.3.1",
     "react-native-paper": "^4.11.2",
     "react-native-paper-dropdown": "^1.0.7",
+    "react-native-reanimated": "^2.9.1",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.11.0",
     "react-native-splash-screen": "^3.3.0",
     "react-native-vector-icons": "^9.1.0",
+    "react-native-vision-camera": "^2.14.0",
     "react-native-webview": "^11.18.2",
     "react-query": "^3.34.15"
   },
