add taging and untaging ble (still develop mode)

--- a/.env
+++ b/.env
@@ -8,3 +8,4 @@ ITAM_API_KEY = $pbkdf2-sha512$6000$P4cQYmzN.X8v5bw3xhijtA$PzGUd4dnuuvvEDgwhUsvDa
 ERROR_CONNECTION = Koneksi Terganggu
 ERROR_COMMON = Aplikasi Mengalami Kesalahan
 ERROR_TITLE = Kesalahan
+INIT_QR_CODE = Tidak ada qr code yang dipindai
