--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-native-vector-icons": "^9.1.0",
     "react-native-vision-camera": "^2.14.0",
     "react-native-webview": "^11.18.2",
-    "react-query": "^3.34.15"
+    "react-query": "^3.34.15",
+    "vision-camera-code-scanner": "^0.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.17.2",
