change date format

--- a/.env
+++ b/.env
@@ -10,4 +10,5 @@ ITAT_TIME_OUT = 3000
 ERROR_CONNECTION = Koneksi Terganggu
 ERROR_COMMON = Aplikasi Mengalami Kesalahan
 ERROR_TITLE = Kesalahan
-INIT_QR_CODE = Tidak ada qr code yang dipindai
+INIT_QR_CODE_BLE = QR Code tidak terdaftar sebagai Tag BLE
+INIT_QR_CODE_RFID = QR Code tidak terdaftar sebagai Tag RFID
