--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native-stack": "^6.5.0",
     "axios": "^0.26.0",
     "jwt-decode": "^3.1.2",
+    "moment": "^2.29.4",
     "react": "17.0.2",
     "react-hook-form": "^7.27.1",
     "react-native": "0.67.2",
