multipe notif (still issue)

--- a/.env
+++ b/.env
@@ -14,3 +14,4 @@ ERROR_TITLE = Kesalahan
 DEFAULT_QR_CODE_BLE = QR Code tidak terdaftar sebagai Tag BLE
 DEFAULT_QR_CODE_RFID = QR Code tidak terdaftar sebagai Tag RFID
 INIT_QR_CODE = Lakukan Pemindaian QR Code
+ITAM_HOME_URL_PENERIMAAN_BARANG = http://10.230.200.152:8014/web#action=912&cids=1&menu_id=280
