--- a/app.json
+++ b/app.json
@@ -1,4 +1,4 @@
 {
-  "name": "PolriRfidFrontendAndroid",
-  "displayName": "PolriRfidFrontendAndroid"
+  "name": "RFIDScannerWL",
+  "displayName": "RFID Scanner WL"
 }
