--- a/ios/RFIDScannerWL/Info.plist
+++ b/ios/RFIDScannerWL/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string>PolriRfidFrontendAndroid</string>
+	<string>RFID Scanner WL</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
