--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "PolriRfidFrontendAndroid",
+  "name": "RFIDScannerWL",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -23,6 +23,7 @@
     "react-native-paper": "^4.11.2",
     "react-native-paper-dropdown": "^1.0.7",
     "react-native-reanimated": "^2.9.1",
+    "react-native-rename": "^2.9.0",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.11.0",
     "react-native-splash-screen": "^3.3.0",
