--- a/ios/Podfile
+++ b/ios/Podfile
@@ -16,6 +16,8 @@ target 'RFIDScannerWL' do
 
   pod 'react-native-webview', :path => '../node_modules/react-native-webview'
 
+  pod 'RNFS', :path => '../node_modules/react-native-fs'
+
   target 'RFIDScannerWLTests' do
     inherit! :complete
     # Pods for testing
