--- a/android/build.gradle
+++ b/android/build.gradle
@@ -7,6 +7,8 @@ buildscript {
         compileSdkVersion = 31
         targetSdkVersion = 30
         ndkVersion = "21.4.7075529"
+        VisionCameraCodeScanner_compileSdkVersion = 31 
+        VisionCameraCodeScanner_targetSdkVersion = 30
     }
     repositories {
         google()
